# CodefyUI

./: .gitignore  Makefile  README.md  README_zh-TW.md  SETUP.md  SETUP_zh-TW.md  cdui  cdui.cmd  dev.py  install.ps1  install.sh
backend/: pyproject.toml  run_graph.py
backend/app/: config.py  main.py
backend/app/api/: routes_custom_nodes.py  routes_examples.py  routes_execution_outputs.py  routes_graph.py  routes_images.py  routes_models.py  routes_nodes.py  routes_presets.py  ws_execution.py
backend/app/core/: device_utils.py  graph_engine.py  node_base.py  node_registry.py  preset_registry.py  run_output_store.py  type_system.py
backend/app/custom_nodes/: example_custom_node.py
backend/app/nodes/cnn/: activation_node.py  adaptive_avgpool2d_node.py  avgpool2d_node.py  batchnorm_node.py  conv1d_node.py  conv2d_node.py  conv_transpose2d_node.py  dropout_node.py  maxpool2d_node.py
backend/app/nodes/control/: compare_node.py  for_loop_node.py  if_node.py  start_node.py
backend/app/presets/: lstm_sequence.json  simple_cnn_classifier.json  sub1.json  training_pipeline.json
backend/app/schemas/: __init__.py  models.py
backend/tests/: conftest.py  test_api_graph.py  test_api_images.py  test_api_models.py  test_api_nodes.py  test_cache.py  test_cancellation.py  test_dataset_extension.py  test_error_recovery.py  test_graph_engine.py  test_graph_model.py  test_node_registry.py  test_parallel_execution.py  test_routes_execution_outputs.py  test_run_output_store.py  test_schemas.py  test_start_node.py  test_tensor_input.py  test_type_system.py  test_ws_execution.py
(+213 files in other folders)
